# astrbot-design

.github/workflows/: build-docs.yml  dashboard_ci.yml  deploy.yml  release.yml  scan-plugin.yml  verify-signature.yml
astrbot-cli/: pyproject.toml
astrbot-cli/src/astrbot_cli/: __init__.py  main.py
astrbot-cli/src/astrbot_cli/commands/: batch.py  config.py  new.py  plugin.py  repl.py
astrbot-cli/tests/: conftest.py  test_main.py  test_new.py  test_repl.py
astrbot/api/: multi_agent.py
astrbot/core/config/: default.py
astrbot/core/kb/: __init__.py  episodic_memory.py  query_expander.py  reranker.py
astrbot/core/kb/connectors/: __init__.py  base.py  (+3 more)
astrbot/core/multi_agent/: __init__.py  agents.py  config.py  context_pool.py  exceptions.py  message_queue.py
dashboard/src/router/: FloatingRoutes.ts  index.ts
dashboard/src/views/: MultiAgentDashboard.vue
docs/: DASHBOARD_ARCHITECTURE.md  EXTENSION_DIRECTIONS.md  plugin-development.md
docs-site/: agent-runner.md  api.md  architecture.md  dashboard.md  index.md  knowledge-base-enhancements.md  mcp.md  multi-agent.md  package.json  platform-adapter.md  plugin-marketplace-api.md  plugin-marketplace.md
docs-site/.vitepress/: config.mjs
docs-site/.vitepress/theme/: custom.css
ide-plugins/intellij-plugin/: build.gradle.kts
ide-plugins/vscode-extension/: package.json  tsconfig.json
ide-plugins/vscode-extension/src/: apiClient.ts  debugConfig.ts  extension.ts  pluginGenerator.ts  statusPanel.ts
plugins/: DEVELOPER_KEYS.md  STRUCTURE.md  index-schema.json
scripts/: generate-index.py
(+25 files in other folders)
