[project]
name = "astrbot-cli"
version = "1.0.0"
description = "AstrBot CLI - Modern command line tools for AstrBot development"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "packaging>=24.0",
    "requests>=2.31.0",
    "click>=8.1.0",
]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
astrbot = "astrbot_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
